--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config index.js"
+    "test": "mocha tests/**/*.js --exit --recursive --timeout 6000 --file tests/test-setup.js",
+    "pretest": "node scripts/create-database.js",
+    "posttest": "node scripts/drop-database.js test",
+    "start": "nodemon -r dotenv/config index.js",
+    "prestart": "node scripts/create-database.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^5.0.3",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
-    "nodemon": "^3.0.3"
+    "mocha": "^10.3.0",
+    "nodemon": "^3.0.3",
+    "supertest": "^6.3.4"
   },
   "dependencies": {
     "express": "^4.18.2",
