--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "chai": "^5.0.3",
+    "chai-things": "^0.2.0",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
