--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supertest": "^6.3.4"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "sequelize": "^6.36.0"
