--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "chai": "^5.0.3",
     "chai-things": "^0.2.0",
     "dotenv": "^16.4.1",
+    "enforce-unique": "^1.3.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "mocha": "^10.3.0",
